# videosubX

./: .gitignore  README.md  TODO.md  make_venv.ps1  pyproject.toml
test/: _infodict-noflat-autowrite.json  cli.html  dict.html  pwcpp_output.txt  test.ipynb  test.py  test_cli2api.py  test_ytdlp_args.ipynb
test/ai_test/: hfhub.py  kotoba_test.py  npu_test.py  test_quantization.py  whisper_test.py  yanolja.py  yanolja_ov.py
test/fw-ct2/: int8_preconverted_difference.py  kotoba_large_int8.py  wx_test_kotoba_int8.py
test/hf/: whisper_1.py  whisper_2.py  whisper_ft.py
test/output/auto_write/: 문과&이과 [PLDUgRz_joPOUCB0kBGAM9nVA8LEISGiDi].info.json
test/output/auto_write_no_flat/: 2시간 실험해서 단 10초만 볼 수 있는 경이로운 현상.. (성공확률 14%) [5LaheFrkDjA].info.json  90만 유튜버 불러서 콜라보 하면 생기는 일ㅋㅋㅋ [r7ieUKbQPm8].info.json  공돌이의 끝판왕이 만든 혁신적인 발명품.. (그러나 100년간 아무에게도 쓰이지 않은 황당한 이유) [2cz6pxTU89I].info.json  문과&이과 [PLDUgRz_joPOUCB0kBGAM9nVA8LEISGiDi].info.json  물엿에 형광 팔찌를 섞으면..？？!! ※따라 하지 마시오※ [3gNchE9UA1I].info.json  실제 진공 속에서 노래 들어보기 [XkeLnZq8l7A].info.json  실제로 우주에서 녹음된 충격적인 다양한 소리들 (소름주의) [myj7LgXZyV8].info.json  정답을 맞힐 확률이 33%가 아닌 이유 (문과는 이해 못 함ㅈㅅ) [5qhm4lWl6VE].info.json
test/output/manually_write/: 문과&이과.json
test/pwcpp/: kotoba_test.py  log.txt  pwcpp_output.txt.srt  pwcpp_test.py  pwcpp_test_c_api.py
test/py/: t_dataclass.py  test_class.py
test/service_layer/: test_logging.py
test/vad_test/: silero_test.py
test/ydl/: _test_ytdlp_args.py  parser_test.py  test_ytdlp_args.ipynb  test_ytdlp_infodict.py  yt-dlp-info.py
typings/: _pywhispercpp.pyi
videosubx/: __init__.py  __main__.py
videosubx/core/: __init__.py
videosubx/download/: __init__.py  custom_filter_template.txt  custom_formatselector_template.txt  custom_pp_template.py  download.py  download_youtube.py  load_custom_code.py  parse.py  types.py
videosubx/gui/: __init__.py
videosubx/mediamanage/: __init__.py
videosubx/transcription/: base.py  transcribe.py  transcribe_wx.py  types.py
videosubx/translation/: aihub_ja_ko.py  base.py  deep_tr.py
videosubx/utils/: format_str.py  types.py  whisperx_configs.py
