[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["videosubx*"]

[project]
name = "videosubX"
version = "0.1.0"
authors = [
    { name = "leejunsu0530", email = "leejunsu0530@gmail.com" }
]
description = "translate video images and audio"
readme = "README.md"
requires-python = ">=3.11,<3.14" # paddlepaddle, whisperx 때문에 13으로 제한. 3.12 이하면 <3.13이라 적어야 3.12.1 등을 포함함
keywords = ["translate", "translation", "whisper", "whisperx", "ocr", "video", "audio", "subtitle"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
# torchcodec 호환성은 https://github.com/meta-pytorch/torchcodec?tab=readme-ov-file#installing-torchcodec 참고.
# torch 버전과 맞춰야 함. whisperx 3.8.1은 "torch~=2.8.0"라 하니 torchcodec은 0.7로 고정
dependencies = [ # paddlepaddle, torch는 별도 설치
    "whisperx~=3.8.1", 
    "deep-translator",
    "rich",
    "yt-dlp[default,curl-cffi]",
    "gradio",
    "torchcodec<0.8",
    "transformers",
    # "opencv-python",
    # "paddleocr",
    
]

[project.optional-dependencies]
# gui = ["gradio"]
pwcpp = ["pywhisercpp"]
dev = ["pip-licenses"]
intel = [ # 최신 버전을 위해 github에서 가져옴
    "openvino", 
    "optimum-intel[openvino] @ git+https://github.com/huggingface/optimum-intel.git"
    ]

[project.scripts]
vidsubx = "videosubx:main" # 모듈경로:함수이름 구조
vidsubx-gui = "videosubx.gui:main"

[project.urls]
Homepage = "https://github.com/leejunsu0530/videosubX"
Repository = "https://github.com/leejunsu0530/videosubX"
